[package]
name = "jetro"
version = "0.2.6"
edition = "2021"
authors = ["Milad (Mike) Taghavi <mitghi.at.me.com>"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore"]
repository = "https://github.com/mitghi/jetro"
documentation = "https://github.com/mitghi/jetro"
homepage = "https://github.com/mitghi/jetro"
description = "Jetro is tool to transform, query and compare JSON format"
keywords = ["json-search", "json-query", "json-path", "jmespath", "serde"]
categories = ["algorithms", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.102"
pest = "2.7.0"
pest_derive = "2.7.0"
serde = { version = "1.0.171", features = ["derive"] }
parking_lot = "0.12"
memmap2 = "0.9"
smallvec = { version = "1", features = ["union"] }
indexmap = "2"

[dev-dependencies]
tempfile = "3"
