[workspace]
members = ["jetro-core", "jetro-macros"]

[package]
name = "jetro"
version = "0.3.0"
edition = "2021"
authors = ["Milad (Mike) Taghavi <mitghi.at.me.com>"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore"]
repository = "https://github.com/mitghi/jetro"
documentation = "https://github.com/mitghi/jetro"
homepage = "https://github.com/mitghi/jetro"
description = "Jetro - transform, query, and compare JSON"
keywords = ["json-search", "json-query", "json-path", "jmespath", "serde"]
categories = ["algorithms", "encoding"]

[dependencies]
jetro-core   = { path = "jetro-core", version = "0.3.0" }
serde_json   = "1.0.102"
jetro-macros = { path = "jetro-macros", version = "0.1.0", optional = true }

[features]
default = []
macros  = ["dep:jetro-macros"]
