[package]
name = "jetro-core"
version = "0.3.0"
edition = "2021"
authors = ["Milad (Mike) Taghavi <mitghi.at.me.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mitghi/jetro"
description = "Jetro core — parser, compiler, and VM for the Jetro JSON query language. Storage-free."
keywords = ["json-search", "json-query", "json-path", "jmespath", "serde"]
categories = ["algorithms", "encoding"]

[dependencies]
serde_json = "1.0.102"
pest = "2.7.0"
pest_derive = "2.7.0"
serde = { version = "1.0.171", features = ["derive"] }
parking_lot = "0.12"
smallvec = { version = "1", features = ["union"] }
indexmap = "2"
memchr = "2"
