[package]
name = "jetro-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.jetro-core]
path = ".."
features = ["fuzz_internal"]

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "plan"
path = "fuzz_targets/plan.rs"
test = false
doc = false
bench = false

[[bin]]
name = "collect"
path = "fuzz_targets/collect.rs"
test = false
doc = false
bench = false
